# SME0808-2025-2

./: .env.sample  .gitignore  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
src/cli/: create_tables.py  downloader.py  populate_database.py  validate_database.py
src/tsa/: __init__.py  _settings.py  logger.py  main.py  settings.py
src/tsa/database/: connector.py  models.py
src/tsa/database/daos/: __init__.py  base.py  city.py  observation.py  region.py  state.py  station.py
src/tsa/database/models/: __init__.py  cities.py  obsevations.py  regions.py  states.py  stations.py
src/tsa/database/repositories/: __init__.py  base.py  city.py  observation.py  region.py  state.py  station.py
src/tsa/notebooks/: eda.ipynb
