[project]
name = "tsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aline", email = "line.asramos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.27",
    "statsmodels>=0.14.5",
]

[project.scripts]
tsa = "tsa.main:main"
downloader = "cli.downloader:main"
build-db = "cli.build_database:main"
validate-db = "cli.validate_database:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cli",
    "src/tsa",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "nbformat>=5.10.4",
    "ruff>=0.14.1",
]
